Problem solved with mobile scrolling. There is still the big jump scrolling problem

--- a/src/components/franchiseList.module.scss
+++ b/src/components/franchiseList.module.scss
@@ -1,9 +1,28 @@
 .column {
   // width: 90vw;
   margin: 0 auto;
-  // margin-top: 3rem;
+  margin-top: 3rem;
 
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.top-anchor {
+  position: absolute;
+  width: 90vw;
+  // width: 1px
+  height: 1px;
+  background-color: blue;
+  // top: 500px;
+  top: 31.25rem;
+  // AN ERROR HAPPENS WITH THESE VALUES
+  // top: 20rem;
+  // top: 120vh;
+  // top: 20rem;
+  left: 0;
+
+  @media only screen and (max-width: 37.5em) {
+    top: 62.5rem;
+  }
 }
